--- a/ci/pubspec.yaml
+++ b/ci/pubspec.yaml
@@ -7,10 +7,14 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
-  flutter: { sdk: flutter }
-  flutter_map: ^7.0.0
-  latlong2: ^0.9.1
+  flutter:
+    sdk: flutter
+  # Versões compatíveis entre si
+  flutter_map: ^6.1.0
+  latlong2: ^0.8.1
   flutter_map_tile_caching: ^8.0.0
+
+  # Utilidades
   flutter_colorpicker: ^1.0.3
   path_provider: ^2.1.3
   uuid: ^4.4.0
