--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,8 @@
 workflows:
   android_release:
     name: Build APK (OSM)
-    # sem instance_type para usar o padrão do plano
+    # usa a máquina Linux gratuita
+    instance_type: linux
     max_build_duration: 60
 
     environment:
@@ -21,23 +22,20 @@ workflows:
           dart --version
           java -version
 
-      # seu repositório não é um projeto Flutter padrão;
-      # criamos um esqueleto e injetamos os arquivos da pasta ci/
+      # cria um app Flutter "vazio" num diretório temporário
       - name: Criar esqueleto Flutter
         script: |
           rm -rf $APP_DIR
           flutter create $APP_DIR
 
+      # injeta seus arquivos do repositório (apenas estes dois)
       - name: Injetar arquivos do app
         script: |
-          # pubspec + código
           cp -f ci/pubspec.yaml $APP_DIR/pubspec.yaml
           mkdir -p $APP_DIR/lib
           cp -f ci/lib_main.dart $APP_DIR/lib/main.dart
-
-          # Manifest Android
-          mkdir -p $APP_DIR/android/app/src/main
-          cp -f ci/AndroidManifest.xml $APP_DIR/android/app/src/main/AndroidManifest.xml
+          # Observação: NÃO copiamos nada de android/.
+          # Usamos tudo que o "flutter create" gerou.
 
       - name: Instalar dependências
         script: |
@@ -47,7 +45,6 @@ workflows:
       - name: Build APK release
         script: |
           cd $APP_DIR
-          # APK sem assinatura própria (release genérica)
           flutter build apk --release --verbose
 
     artifacts:
