--- a/ci/pubspec.yaml
+++ b/ci/pubspec.yaml
@@ -1,32 +1,19 @@
 name: territorios_urbanos
-description: App para demarcar territórios em qualquer cidade (OSM). Exporta GeoJSON/KML/KMZ/WKT/GPX. Offline via cache de tiles.
-publish_to: 'none'
+description: App mínimo para validar build no Codemagic
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.6
 
-  # Mapas (todas compatíveis entre si)
-  flutter_map: ^8.2.1
-  flutter_map_tile_caching: ^10.1.1
-  latlong2: ^0.9.1
-
-  # Utilidades
-  flutter_colorpicker: ^1.0.3
-  path_provider: ^2.1.3
-  uuid: ^4.4.0
-  shared_preferences: ^2.2.3
-  file_picker: ^8.0.3
-  http: ^1.2.2
-  collection: ^1.18.0
-  geojson_vi: ^2.0.4
-  xml: ^6.5.0
-  archive: ^3.6.1
-  gpx: ^2.2.1
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
